# Vulkan-Editor

./: .gitignore  Vertex.cpp  Vertex.h  application.h  code  compile.sh  device.h  globalVariables.h  headers.h  main.cpp  meson.build  model.cpp  model.h  myvulkanapp.cpp  node.h  pipeline.h  renderer.cpp  renderpass.h  swapchain.h  vulkan.xml  vulkan_config.h  vulkan_generator.h  vulkan_utils.cpp  vulkan_utils.h  vulkan_view.h
shaders/: frag.slang  frag.spv  vert.slang  vert.spv
vulkan_base/: vulkan_base.h  vulkan_device.cpp  vulkan_swapchain.cpp
vulkan_editor/: application.cpp  application.h  device.cpp  device.h  globalVariables.h  header.cpp  header.h  headers.h  imguiSetup.cpp  imguiSetup.h  instance.cpp  instance.h  logicalDevice.cpp  logicalDevice.h  model.cpp  model.h  node.h  physicalDevice.cpp  physicalDevice.h  pipeline.cpp  pipeline.h  renderpass.cpp  renderpass.h  swapchain.cpp  swapchain.h  template_loader.cpp  template_loader.h  utils.cpp  utils.h  vulkan_base.h  vulkan_renderpass.cpp  vulkan_view.cpp  vulkan_view.h
vulkan_templates/: application.txt  buffer.txt  class.txt  globalVariables.txt  header.txt  image.txt  instance.txt  logicalDevice.txt  model.txt  physicalDevice.txt  pipeline.txt  renderpass.txt  swapchain.txt  utils.txt
